computer_science/ai/genai-on-kubernetes/chapter5-chatbot/eks/manifests/chatbot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-ui-service
  labels:
    app.kubernetes.io/name: chatbot-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chatbot-ui
  ports:
    - name: http
      port: 7860
      targetPort: 7860
