computer_science/ai/genai-on-kubernetes/chapter5-chatbot/eks/manifests/chatbot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ui-ingress
  labels:
    app.kubernetes.io/name: chatbot-ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-ui-service
                port:
                  number: 7860
